# stackops-tracing

./: README.md  pyproject.toml
local-dev/: docker-compose.yml  grafana-datasources.yaml  otel-collector-config.yaml  tempo.yaml
src/stackops_tracing/: __init__.py  config.py  decorators.py  instrumentor.py
tests/: test_config.py  test_decorators.py  test_instrumentor.py
