[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackops-tracing"
version = "0.1.0"
description = "A reusable tracing and logging package built on OpenTelemetry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api == 1.42.1",
    "opentelemetry-sdk == 1.42.1",
    "opentelemetry-proto == 1.42.1",
    "opentelemetry-exporter-otlp-proto-common == 1.42.1",
    "opentelemetry-exporter-otlp-proto-http == 1.42.1",
    "opentelemetry-instrumentation == 0.63b1",
    "opentelemetry-semantic-conventions == 0.63b1",
]

[project.optional-dependencies]
redis = [
    "opentelemetry-instrumentation-redis == 0.63b1",
]
mongo = [
    "opentelemetry-instrumentation-pymongo == 0.63b1",
]
kafka = [
    "opentelemetry-instrumentation-kafka-python == 0.63b1",
    "kafka-python",
]
rabbit = [
    "opentelemetry-instrumentation-pika == 0.63b1",
    "opentelemetry-instrumentation-aio-pika == 0.63b1",
    "pika",
    "aio-pika",
    "aiormq",
]
fastapi = [
    "opentelemetry-instrumentation-fastapi == 0.63b1",
    "opentelemetry-instrumentation-asgi == 0.63b1",
]
postgres = [
    "opentelemetry-instrumentation-asyncpg == 0.63b1",
    "opentelemetry-instrumentation-sqlalchemy == 0.63b1",
]
all = [
    "opentelemetry-instrumentation-redis == 0.63b1",
    "opentelemetry-instrumentation-pymongo == 0.63b1",
    "opentelemetry-instrumentation-kafka-python == 0.63b1",
    "kafka-python",
    "opentelemetry-instrumentation-pika == 0.63b1",
    "opentelemetry-instrumentation-aio-pika == 0.63b1",
    "pika",
    "aio-pika",
    "aiormq",
    "opentelemetry-instrumentation-fastapi == 0.63b1",
    "opentelemetry-instrumentation-asgi == 0.63b1",
    "opentelemetry-instrumentation-asyncpg == 0.63b1",
    "opentelemetry-instrumentation-sqlalchemy == 0.63b1",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stackops_tracing"]
